# hubble

./: .gitignore  Cargo.toml
hubble/: Cargo.toml  download_stockfish.sh
hubble-cli/: Cargo.toml
hubble-cli/src/: main.rs
hubble-cli/src/reports/: blunder.rs  mod.rs  opening.rs
hubble-db/: Cargo.toml
hubble-db/migrations/2021-12-30-205814_openings/: up.sql
hubble-db/migrations/2022-02-20-150339_game_markers/: down.sql  up.sql
hubble-db/migrations/2022-02-27-200504_blunders/: down.sql  up.sql
hubble-db/src/: db.rs  lib.rs  schema.rs
hubble-db/src/models/: game.rs  mod.rs  opening.rs  user.rs
hubble-web/: Cargo.toml
hubble-web/src/: main.rs
hubble-web/src/routes/: analyse.rs  blunder.rs  game.rs  mod.rs  opening.rs
hubble/src/: lib.rs  lichess.rs
hubble/src/analysis/: analyser.rs  blunder.rs  mod.rs  opening.rs  opening_counter.rs  opening_tree.rs
hubble_backend/: Cargo.toml  docker-compose.yml
hubble_backend/migrations/2021-12-21-103350_init/: down.sql  up.sql
hubble_backend/migrations/2021-12-30-205814_openings/: down.sql
hubble_backend/src/: analyser.rs  db.rs  lib.rs  lichess.rs  main.rs  opening.rs  player.rs  schema.rs  stockfish.rs
hubble_backend/src/analysis/: analyser.rs  blunder.rs  mod.rs
hubble_backend/src/models/: game.rs  matches.rs  mod.rs  opening.rs  user.rs
hubble_backend/src/routes/: analyse.rs  blunder.rs  game.rs  opening.rs
hubble_frontend/: package.json
hubble_frontend/src/: App.js  index.css  index.js
hubble_frontend/src/components/: Analysis.jsx  Analysis.module.css  Board.jsx  Board.module.css  Chooser.jsx  MovePicker.jsx  MovePicker.module.css  ScoreChart.jsx  ScoreChart.module.css
parse_openings/: Cargo.toml
parse_openings/data/: download_data.sh
parse_openings/src/: main.rs
src/: analyser.rs  lichess.rs  main.rs  opening_tree.rs  stockfish.rs
