[package]
name = "hubble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shakmaty = "0.20.2"
pgn-reader = "0.19.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rocket = "0.5.0-rc.1"
serde = "1.0.132"
serde_json = "1.0"
