[package]
name = "hubble-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"]}
dotenv = "0.15.0"
futures = "0.3"
tokio = { version = "1.15.0", features = ["full"] }
comfy-table = "5.0.0"

hubble = { path="../hubble" }
hubble-db = { path="../hubble-db" }
