[package]
name = "hubble-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "serde_json", "r2d2"] }
serde = { version = "1.0.132", features = ["derive"] }

serde_json = "1.0"

