[package]
name = "hubble-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rocket = { version="0.5.0-rc.1", features = ["json"] }
dotenv = "0.15.0"
serde = "1.0.132"
serde_json = "1.0"

hubble-db = { path="../hubble-db" }
hubble = { path="../hubble" }
