[package]
name = "hubble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shakmaty = "0.20.2"
pgn-reader = "0.19.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = "1.0.132"
serde_json = "1.0"
dotenv = "0.15.0"
futures-util = "0.3.19"
bytes = "1.1.0"
regex = "1"

hubble-db = { path="../hubble-db" }
